--- a/themes/hueman/source/css/_partial/article.styl
+++ b/themes/hueman/source/css/_partial/article.styl
@@ -65,12 +65,12 @@
         .article-title
             margin-bottom: 10px
             font-size: 22px
-            font-weight: 400
+            font-weight: 600
             line-height: 1.5em
             word-wrap: break-word
             a
                 transition: color 0.3s ease-in
-                color: #376B6D
+                color: black
         .article-excerpt
             position: relative
             color: rgb(170, 170, 170)
